[tool.poetry]
name = "myoquant"
version = "0.2.2"
description = "MyoQuant🔬: a tool to automatically quantify pathological features in muscle fiber histology images."
authors = ["Corentin Meyer <corentin.meyer@etu.unistra.fr>"]
maintainers = ["Corentin Meyer <corentin.meyer@etu.unistra.fr>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://lbgi.fr/MyoQuant/"
repository = "https://github.com/lambda-science/MyoQuant"
keywords = ["histology", "quantification", "biology","deep-learning"]

[tool.poetry.scripts]
myoquant = "myoquant.__main__:app"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.9.1"
cellpose = "^2.1.0"
stardist = "^0.8.3"
csbdeep = "^0.7.2"
imageio = "^2.21.1"
scikit-image = "^0.19.3"
pandas = "^1.4.3"
typer = "^0.6.1"
rich = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
mkdocs-material = "*"
black = {extras = ["jupyter"], version = "*"}
ipykernel = "*"
pytest = "*"
pre-commit = "*"
mypy = "*"
mkdocstrings = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
